[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Battle.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Action_list.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/bar_fill.png" type="Texture" id=4]
[ext_resource path="res://Assets/bar.png" type="Texture" id=5]
[ext_resource path="res://Resources/Actions/A_Slash.tres" type="Resource" id=6]
[ext_resource path="res://Resources/Actions/A_Strong_slash.tres" type="Resource" id=7]
[ext_resource path="res://Scripts/Enemy_AI.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Enemy_stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/Stats.gd" type="Script" id=10]

[sub_resource type="Resource" id=2]
script = ExtResource( 10 )
upkeep = 1
evasion = 80
armor = 0
power = 20
accuracy = 100

[sub_resource type="Resource" id=3]
script = ExtResource( 10 )
upkeep = 1
evasion = 0
armor = 10
power = 20
accuracy = 120

[sub_resource type="Resource" id=4]
script = ExtResource( 10 )
upkeep = 1
evasion = 50
armor = 5
power = 20
accuracy = 100

[sub_resource type="Resource" id=5]
script = ExtResource( 10 )
upkeep = 1
evasion = 40
armor = 5
power = 30
accuracy = 90

[sub_resource type="Curve" id=1]
min_value = 0.5
max_value = 2.0
_data = [ Vector2( 0, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 0.491429, 1 ), 2.13182, 2.13182, 0, 0, Vector2( 1, 2 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Resource" id=6]
script = ExtResource( 10 )
upkeep = 1
evasion = 20
armor = 0
power = 10
accuracy = 150

[sub_resource type="Resource" id=7]
script = ExtResource( 10 )
upkeep = 1
evasion = 60
armor = 0
power = 10
accuracy = 70

[sub_resource type="Resource" id=8]
script = ExtResource( 10 )
upkeep = 1
evasion = 120
armor = 5
power = 5
accuracy = 50

[sub_resource type="Resource" id=9]
script = ExtResource( 10 )
upkeep = 1
evasion = 5
armor = 5
power = 30
accuracy = 90

[node name="Battle" type="Node2D"]
script = ExtResource( 2 )

[node name="GUI" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1000.0
margin_bottom = 580.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
margin_right = 980.0
margin_bottom = 560.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HBoxContainer"]
margin_right = 64.0
margin_bottom = 560.0
mouse_filter = 2

[node name="Mana" type="MarginContainer" parent="GUI/HBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
rect_min_size = Vector2( 64, 20 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="GUI/HBoxContainer/VBoxContainer/Mana"]
margin_right = 64.0
margin_bottom = 20.0

[node name="Amount" type="TextureProgress" parent="GUI/HBoxContainer/VBoxContainer/Mana/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 332.0
margin_top = 12.0
margin_right = 580.0
margin_bottom = 57.0
mouse_filter = 2
size_flags_horizontal = 15
size_flags_vertical = 15
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action_list_container" type="NinePatchRect" parent="GUI"]
margin_right = 980.0
margin_bottom = 560.0

[node name="Action_list" parent="GUI/Action_list_container" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 440.0
margin_right = 900.0
margin_bottom = 540.0

[node name="Actors" type="YSort" parent="."]

[node name="Party" type="YSort" parent="Actors"]

[node name="Party_actor" parent="Actors/Party" instance=ExtResource( 1 )]
position = Vector2( 342, 202 )
stats = SubResource( 2 )
actions = [ ExtResource( 6 ), ExtResource( 7 ) ]

[node name="Party_actor2" parent="Actors/Party" instance=ExtResource( 1 )]
position = Vector2( 259, 249 )
stats = SubResource( 3 )
actions = [ ExtResource( 6 ) ]

[node name="Party_actor3" parent="Actors/Party" instance=ExtResource( 1 )]
position = Vector2( 96, 352 )
stats = SubResource( 4 )

[node name="Party_actor4" parent="Actors/Party" instance=ExtResource( 1 )]
position = Vector2( 176, 302 )
stats = SubResource( 5 )
actions = [ ExtResource( 7 ) ]

[node name="Enemy_AI" type="Node" parent="Actors"]
script = ExtResource( 8 )
evasion_curve = SubResource( 1 )

[node name="Enemies" type="YSort" parent="Actors"]

[node name="Actor" parent="Actors/Enemies" instance=ExtResource( 1 )]
position = Vector2( 692, 249 )
stats = SubResource( 6 )
team = 1
actions = [ ExtResource( 6 ) ]

[node name="Enemy_stats" parent="Actors/Enemies/Actor" instance=ExtResource( 9 )]

[node name="Actor2" parent="Actors/Enemies" instance=ExtResource( 1 )]
position = Vector2( 776, 302 )
stats = SubResource( 7 )
team = 1
actions = [ ExtResource( 6 ) ]

[node name="Enemy_stats" parent="Actors/Enemies/Actor2" instance=ExtResource( 9 )]

[node name="Actor3" parent="Actors/Enemies" instance=ExtResource( 1 )]
position = Vector2( 859, 352 )
stats = SubResource( 8 )
team = 1
actions = [ ExtResource( 6 ) ]

[node name="Enemy_stats" parent="Actors/Enemies/Actor3" instance=ExtResource( 9 )]

[node name="Actor4" parent="Actors/Enemies" instance=ExtResource( 1 )]
position = Vector2( 606, 202 )
stats = SubResource( 9 )
team = 1
actions = [ ExtResource( 6 ) ]

[node name="Enemy_stats" parent="Actors/Enemies/Actor4" instance=ExtResource( 9 )]
